--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Azerbaijan Opportunities</title>
-    <link rel="stylesheet" href="/styles.css" />
+    <link rel="stylesheet" href="C:\Users\user\webpage\public/styles.css" />
   </head>
   <body>
     <header class="container site-header">
       <h1><span class="brand">AZ Opportunities</span></h1>
       <nav class="actions">
-        <a href="/login.html" id="loginLink">Login</a>
-        <a href="/register.html" id="registerLink">Register</a>
+        <a href="C:\Users\user\webpage\public/login.html" id="loginLink">Login</a>
+        <a href="C:\Users\user\webpage\public/register.html" id="registerLink">Register</a>
         <button id="logoutBtn" style="display:none">Logout</button>
       </nav>
     </header>
