--- a/public/register.html
+++ b/public/register.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Register</title>
+    <title>Lahvo – Register</title>
     <link rel="stylesheet" href="C:\Users\user\webpage\public/styles.css" />
   </head>
   <body>
     <main class="auth container">
-      <h1>Create account</h1>
+      <h1 style="display:flex;align-items:center;gap:10px"><img src="C:\Users\user\webpage\public\logo.svg" alt="Lahvo" style="height:28px;width:auto" /> Create account</h1>
       <input id="email" type="email" placeholder="Email" />
       <input id="password" type="password" placeholder="Password" />
       <button id="registerBtn">Register</button>
