--- a/public/login.html
+++ b/public/login.html
@@ -12,7 +12,7 @@
       <input id="email" type="email" placeholder="Email" />
       <input id="password" type="password" placeholder="Password" />
       <button id="loginBtn">Login</button>
-      <p>New here? <a href="/register.html">Create an account</a></p>
+      <p>New here? <a href="C:\Users\user\webpage\public/register.html">Create an account</a></p>
     </main>
     <script>
       const loginBtn = document.getElementById('loginBtn');
