--- a/public/register.html
+++ b/public/register.html
@@ -12,7 +12,7 @@
       <input id="email" type="email" placeholder="Email" />
       <input id="password" type="password" placeholder="Password" />
       <button id="registerBtn">Register</button>
-      <p>Already have an account? <a href="/login.html">Login</a></p>
+      <p>Already have an account? <a href="C:\Users\user\webpage\public/login.html">Login</a></p>
     </main>
     <script>
       const registerBtn = document.getElementById('registerBtn');
